--- a/legacy-rp-cad-frontend/package.json
+++ b/legacy-rp-cad-frontend/package.json
@@ -14,7 +14,7 @@
     "build": "ember build",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
-    "start": "ember serve",
+    "start": "ember serve --proxy http://127.0.0.1:8000",
     "test": "ember test"
   },
   "devDependencies": {
