--- a/legacy-rp-cad-frontend/package.json
+++ b/legacy-rp-cad-frontend/package.json
@@ -11,7 +11,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build",
+    "build": "ember build --environment=production",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve --proxy http://127.0.0.1:8000",
