--- a/legacy-rp-cad-frontend/package.json
+++ b/legacy-rp-cad-frontend/package.json
@@ -44,9 +44,13 @@
     "eslint-plugin-ember": "^6.2.0",
     "eslint-plugin-node": "^9.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.4"
+    "qunit-dom": "^0.8.4",
+    "sass": "^1.22.12"
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "ember-cli-sass": "^10.0.1"
   }
 }
