--- a/legacy-rp-cad-backend/.env.example
+++ b/legacy-rp-cad-backend/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=legacy-rp-cad
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -6,10 +6,14 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+# Steam API key: https://steamcommunity.com/dev/apikey
+STEAM_API_KEY=YOUR_STEAM_DEV_KEY_HERE
+
+# Database credentials
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=legacy-rp-cad
 DB_USERNAME=root
 DB_PASSWORD=
 
