--- a/legacy-rp-cad-backend/composer.json
+++ b/legacy-rp-cad-backend/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "cloudcreativity/laravel-json-api": "^1.4",
         "fideloper/proxy": "^4.0",
+        "kanalumaddela/laravel-steam-login": "^2.4",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
