--- a/legacy-rp-cad-frontend/package.json
+++ b/legacy-rp-cad-frontend/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "build:watch": "ember build --watch --environment=production",
     "lint:hbs": "ember-template-lint .",
     "lint:js": "eslint .",
     "start": "ember serve --proxy http://127.0.0.1:8000",
@@ -39,6 +40,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-simple-auth": "^1.9.2",
     "ember-source": "~3.12.0",
     "ember-welcome-page": "^4.0.0",
     "eslint-plugin-ember": "^6.2.0",
